fix vector overflow issue

--- a/style.css
+++ b/style.css
@@ -107,9 +107,10 @@ footer {
   );
 }
 
-.hero {
-  overflow: hidden;
-  height: auto;
+.hero--msg {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .hero--msg h1 {
@@ -127,6 +128,7 @@ footer {
     --Gradient-1,
     linear-gradient(180deg, #ff6f48 0%, #f02aa6 100%)
   );
+  width: 167px;
 }
 
 .hero--msg .btn:hover,
@@ -209,7 +211,7 @@ footer {
 }
 
 .img--bg img {
-  width: 60%;
+  width: max(50%, 253px);
 
   margin-top: 4em;
 }
@@ -274,6 +276,11 @@ footer {
     width: 45%;
   }
 
+  .hero .container {
+    margin-top: 6rem;
+    height: auto;
+  }
+
   .img--bg {
     border-radius: 150px;
     background: linear-gradient(180deg, #ff6f48 0%, #f02aa6 100%);
@@ -293,7 +300,7 @@ footer {
   .tilted--rectangle {
     display: block;
     width: 80%;
-    height: 100%;
+    height: 150%;
     transform: rotate(45deg);
 
     border-radius: 9.90625rem;
@@ -302,8 +309,8 @@ footer {
       linear-gradient(180deg, #4851ff 0%, #f02aa6 100%)
     );
     position: relative;
-    top: -950px;
-    right: -215px;
+    top: -1250px;
+    right: -355px;
     z-index: -2;
   }
 
@@ -326,6 +333,11 @@ footer {
 
   .second-section .active--col {
     padding: 4rem 2rem 8.6rem 2rem;
+  }
+
+  .header-hero-div {
+    padding-top: 1.5rem;
+    overflow: hidden;
   }
 }
 
@@ -371,16 +383,23 @@ footer {
   }
 }
 
-@media screen and (min-width: 1341px) {
+@media screen and (min-width: 1121px) and (max-width: 1199px) {
   .tilted--rectangle {
-    top: -1030px;
-    right: -265px;
+    top: -1400px;
+    right: -455px;
   }
 }
 
-@media screen and (min-width: 601px) and (max-width: 961px) {
+@media screen and (min-width: 1280px) {
   .tilted--rectangle {
-    top: -870px;
-    right: -205px;
+    top: -1400px;
+    right: -405px;
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 760px) {
+  .tilted--rectangle {
+    top: -1050px;
+    right: -280px;
   }
 }
